feat: 프리미엄 작품 4개 랜덤 조회 응답 필드 추가 #31